[package]
name = "client"
version = "0.1.0"
authors = ["Nereuxofficial <37740907+Nereuxofficial@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"

tokio = { version = "1", features = ["full"] }
aes-gcm-siv = { version = "0.11.1", features = ["stream"]}
